# hive-clone

./: .gitignore  CMakeLists.txt  MIT License.txt  README.md
cmake/: FetchSFML.cmake
engine/: CMakeLists.txt
engine/include/: engine.hpp  rules.hpp
engine/src/: engine.cpp  rules.cpp
release notes/: release notes.md
tests/: CMakeLists.txt  test_engine.cpp  test_rules.cpp
ui-desktop/: CMakeLists.txt
ui-desktop/include/: ui_app.hpp
ui-desktop/src/: main.cpp  ui_app.cpp
